--- a/contactus.html
+++ b/contactus.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Contact Us</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="./Images/Logo/Title.png" type="image/x-icon">
@@ -25,6 +26,10 @@
   <link href="./static/style.css" rel="stylesheet" type="text/css" />
 
   <style>
+ @media only screen and (max-width: 600px) {
+  /* Styles for screens smaller than 600px (typically phones) */
+}
+
 
     /* navbar css */
     #header-nav .nav-link {
