--- a/crime.html
+++ b/crime.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head>    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Jax.com</title>
@@ -26,6 +27,10 @@
 </head>
 <!------------------------Scroll to top button------------------------------------------------>
 <style>
+ @media only screen and (max-width: 600px) {
+  /* Styles for screens smaller than 600px (typically phones) */
+}
+
   #scrollToTopButton{
 position:fixed;
 bottom: 40px;
