--- a/dummy.html
+++ b/dummy.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Jax.com</title>
@@ -21,6 +22,9 @@
   <link href="./static/style.css" rel="stylesheet" type="text/css" />
 <!------------------------Scroll to top button------------------------------------------------>
 <style>
+ @media only screen and (max-width: 600px) {
+  /* Styles for screens smaller than 600px (typically phones) */
+}
     #scrollToTopButton{
   /* position: sticky; */
   position:relative;
