--- a/faq.html
+++ b/faq.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Jax.com</title>
@@ -29,6 +30,10 @@
   
 </head>
 <body>
+  <style> @media only screen and (max-width: 600px) {
+  /* Styles for screens smaller than 600px (typically phones) */
+}
+</style>
     <!-- navbar starts -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-dark" id="header-nav">
