--- a/home.html
+++ b/home.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Jax.com
@@ -30,6 +31,10 @@
 
 <!------------------------Scroll to top button------------------------------------------------>
 <style>
+ @media only screen and (max-width: 600px) {
+  /* Styles for screens smaller than 600px (typically phones) */
+}
+
   .poster {
     box-shadow: 0 0 15px red !important;
   
