--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   
 <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jax.com</title>
@@ -16,6 +17,10 @@
     <link rel="stylesheet" href="landpage.css">
 
 </head>
+  <style>@media only screen and (max-width: 600px) {
+  /* Styles for screens smaller than 600px (typically phones) */
+}
+</style>
 
 <body id="stop-scrolling">
     <div class="preloader"></div>
