--- a/kids.html
+++ b/kids.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,6 +25,10 @@
 
 <!------------------------Scroll to top button------------------------------------------------>
 <style>
+@media only screen and (max-width: 600px) {
+  /* Styles for screens smaller than 600px (typically phones) */
+}
+
    .poster, .movie_card {
     box-shadow: 0 0 10px red !important;
   
