--- a/login.html
+++ b/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+	      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Sign In | Jax.com</title>
@@ -84,6 +85,10 @@
     </script>
 
     <style>
+@media only screen and (max-width: 600px) {
+  /* Styles for screens smaller than 600px (typically phones) */
+}
+
          #scrollToTopButton{
 position: fixed;
 bottom: 40px;
