--- a/movies.html
+++ b/movies.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,8 +26,9 @@
 
 <!------------------------Scroll to top button------------------------------------------------>
 <style>
-
-
+ @media only screen and (max-width: 600px) {
+  /* Styles for screens smaller than 600px (typically phones) */
+}
 
     #scrollToTopButton{
   position: fixed;
