--- a/popular.html
+++ b/popular.html
@@ -3,6 +3,7 @@
 
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Jax.com</title>
@@ -31,6 +32,9 @@
 
 <!------------------------Scroll to top button------------------------------------------------>
 <style>
+ @media only screen and (max-width: 600px) {
+  /* Styles for screens smaller than 600px (typically phones) */
+}
   #scrollToTopButton{
 position:fixed;
 bottom: 40px;
