--- a/premium.html
+++ b/premium.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Jax.com</title>
@@ -32,6 +33,9 @@
 </head>
 
 <style>
+ @media only screen and (max-width: 600px) {
+  /* Styles for screens smaller than 600px (typically phones) */
+}
   #scrollToTopButton{
 position: fixed;
 bottom: 40px;
