--- a/quiz.html
+++ b/quiz.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jax.com | Quiz page for movie interest</title>
@@ -87,4 +88,8 @@ help us find the right ideas for you</div>
     <script src="js/script.js"></script>
 
 </body>
+    <style>@media only screen and (max-width: 600px) {
+  /* Styles for screens smaller than 600px (typically phones) */
+}
+</style>
 </html>
