--- a/signup.html
+++ b/signup.html
@@ -16,11 +16,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <!------------------------Scroll to top button------------------------------------------------>
-<style>
+<style>   
+     @media only screen and (max-width: 600px) { /* Styles for screens smaller than 600px (typically phones) */ }
   #scrollToTopButton{
     position: fixed;
     bottom: 40px;
