--- a/tv.html
+++ b/tv.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,6 +33,7 @@
 
 <!------------------------Scroll to top button------------------------------------------------>
 <style>
+     @media only screen and (max-width: 600px) { /* Styles for screens smaller than 600px (typically phones) */ }
    .poster, .movie_card {
     box-shadow: 0 0 10px red !important;
   
