--- a/web-series.html
+++ b/web-series.html
@@ -3,7 +3,7 @@
 
 <head>
 
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">    
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,7 +25,8 @@
   <link rel="stylesheet" href="webStyle.css">
 
 <!------------------------Scroll to top button------------------------------------------------>
-<style>
+<style>    
+     @media only screen and (max-width: 600px) { /* Styles for screens smaller than 600px (typically phones) */ }
     #scrollToTopButton{
   position: fixed;
   bottom: 40px;
