--- a/signup.html
+++ b/signup.html
@@ -10,6 +10,7 @@
     <link href="./static/style.css" rel="stylesheet" type="text/css" />
 <html>
   <head>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1839771289312840" crossorigin="anonymous"></script>
     <title> Jax.com|Sign Up</title>
 
     <!-- Font  -->
